# ndpiTest

./: .clang-format  CMakeLists.txt  README.md
src/: main.c
src/lib/: ndpi_common.c  ndpi_common.h
